# BingeWatcher

./: .gitignore  LICENCE  README.md  main.py  pyproject.toml
src/BingeWatcher/: main.py
